# Calcul-DL-california

./: .gitignore  README.md  VENDORING.md  ZIP_DB.txt  aamva_utils.py  aamva_validator_app.py  california_zip_city.py  driver_license_app.py  driver_license_final_fixed.py  health_check.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-light.yml  ci.yml
pages/: 01_help.py
pdf417gen/: __init__.py  aamva.py  encoding.py  enums.py  field_parser.py  license_parser.py
pdf417gen/mappers/: field_mapping.py  version_mappers.py
pdf417gen/models/: license.py
pdf417gen/utils/: regex.py
tests/: test_aamva_builder.py  test_license_parser.py  test_pdf417_import.py
