[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calcul-dl-california"
version = "0.1.0"
description = "PDF417 / AAMVA tools and Streamlit demo"
requires-python = ">=3.8"
dependencies = [
  "requests>=2.28",
  "reportlab>=4.0",
  "streamlit>=1.0",
  "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf417gen*"]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
